static image offset spacing fix

--- a/assets/stylesheets/homepage/_static_image_offset.scss
+++ b/assets/stylesheets/homepage/_static_image_offset.scss
@@ -20,3 +20,8 @@
 		.offset_right_img{padding-bottom:100%; height:0;}
 		.offset_right p {margin-bottom:0;}
 }
+
+
+@media (min-width: 600px) and (max-width: 1024px) {
+.offset_right { margin-bottom: 24%; }
+}
